# rtop

./: .gitignore  Benchmarks.md  Cargo.toml  Setup.md
.opencode/: ARCHITECTURE.md  CODEBASE.md  CONTEXT.md  PROJECT_OVERVIEW.md
src/: app.rs  config.rs  error.rs  event.rs  input.rs  main.rs  state.rs
src/models/: mod.rs  process_info.rs  system_stats.rs
src/services/: metrics_service.rs  mod.rs  process_service.rs
src/system/: battery.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  process.rs
src/ui/: cpu_widget.rs  disk_widget.rs  footer.rs  gpu_widget.rs  layout.rs  memory_widget.rs  mod.rs  network_widget.rs  process_table.rs  theme.rs
src/utils/: formatting.rs  linux.rs  mod.rs  ring_buffer.rs
