[package]
name = "rtop"
version = "0.1.0"
edition = "2021"
description = "A terminal-based Linux system monitor inspired by htop"
license = "MIT"
repository = "https://github.com/user/rtop"
keywords = ["monitor", "system", "htop", "terminal", "tui"]
categories = ["command-line-utilities", "system"]

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
procfs = "0.17"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
libc = "0.2.186"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
